# Scheduling_Engine_Prototype_v1

./: .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.yml  manage.py  mypy.ini  project_schema.txt  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  ruff.toml  run.py
.github/workflows/: ci.yml
app/: __init__.py
app/cli/: __init__.py  __main__.py  check_env.py  diag.py  init_db.py  lint_sql.py  main.py  seed_data.py
app/config/: __init__.py  constants.py  env.py  feature_flags.py  logging_config.py  paths.py  settings.py
app/db/: __init__.py  alembic_env.py  base.py  engine.py  healthcheck.py  seed.py  seed_helpers.py  session.py
app/errors/: __init__.py  codes.py  exceptions.py  handlers.py
app/models/: __init__.py  _base_mixins.py  core.py
app/models/allocations/: __init__.py  final_bye_schedule.py  final_game_schedule.py  saved_byes.py  saved_games.py
app/models/calendar/: __init__.py  dates.py  default_times.py  public_holidays.py
app/models/constraints/: __init__.py  age_court_restrictions.py  age_round_constraints.py  allocation_settings.py  grade_court_restrictions.py  grade_round_constraints.py
app/models/scheduling/: __init__.py  run_constraints_snapshot.py  run_exports.py  scheduling_locks.py  scheduling_run_events.py  scheduling_runs.py
app/models/staging/: __init__.py  p2_allocations.py  p3_bye_allocations.py  p3_game_allocations.py  staging_diffs.py
app/models/system/: __init__.py  competitions.py  organisations.py  season_days.py  seasons.py  user_permissions.py  users.py
app/models/taxonomy/: __init__.py  ages.py  grades.py  teams.py
app/models/timeplan/: __init__.py  round_dates.py  round_groups.py  round_settings.py  rounds.py  time_slots.py
app/models/venues/: __init__.py  court_rankings.py  court_times.py  courts.py  venues.py
app/repositories/: __init__.py  base.py  base_repository.py  mixins.py  organisation_repository.py  typing.py
app/repositories/allocations/: __init__.py  final_bye_schedule_repository.py  final_game_schedule_repository.py  saved_bye_repository.py  saved_game_repository.py
app/repositories/calendar/: __init__.py  date_repository.py  default_time_repository.py  public_holiday_repository.py
app/repositories/constraints/: __init__.py  age_court_restriction_repository.py  age_round_constraint_repository.py  allocation_setting_repository.py  grade_court_restriction_repository.py  grade_round_constraint_repository.py
app/repositories/scheduling/: __init__.py  run_constraints_snapshot_repository.py  run_export_repository.py  scheduling_lock_repository.py  scheduling_run_event_repository.py  scheduling_run_repository.py
app/repositories/staging/: __init__.py  p2_allocation_repository.py  p3_bye_allocation_repository.py  p3_game_allocation_repository.py  staging_diff_repository.py
app/repositories/system/: __init__.py  competition_repository.py  organisation_repository.py  season_day_repository.py  season_repository.py  user_account_repository.py  user_permission_repository.py
app/repositories/taxonomy/: __init__.py  age_repository.py  grade_repository.py  team_repository.py
app/repositories/timeplan/: __init__.py  round_date_repository.py  round_group_repository.py  round_repository.py  round_setting_repository.py  time_slot_repository.py
app/repositories/venues/: __init__.py  court_ranking_repository.py  court_repository.py  court_time_repository.py  venue_repository.py
app/schemas/: __init__.py  _base.py  common.py  enums.py  organisation.py  types.py
app/schemas/allocations/: __init__.py  final_bye_schedule.py  final_game_schedule.py  saved_byes.py  saved_games.py
app/schemas/calendar/: __init__.py  dates.py  default_times.py  public_holidays.py
app/schemas/constraints/: __init__.py  age_court_restrictions.py  age_round_constraints.py  allocation_settings.py  grade_court_restrictions.py  grade_round_constraints.py
app/schemas/scheduling/: __init__.py  run_constraints_snapshot.py  run_exports.py  scheduling_locks.py  scheduling_run_events.py  scheduling_runs.py
app/schemas/staging/: __init__.py  p2_allocations.py  p3_bye_allocations.py  p3_game_allocations.py  staging_diffs.py
app/schemas/system/: __init__.py  competitions.py  organisations.py  season_days.py  seasons.py  user_permissions.py  users.py
app/schemas/taxonomy/: __init__.py  ages.py  grades.py  teams.py
app/schemas/timeplan/: __init__.py  round_dates.py  round_groups.py  round_settings.py  rounds.py  time_slots.py
app/schemas/venues/: __init__.py  court_rankings.py  court_times.py  courts.py  venues.py
app/utils/: __init__.py  ids.py  io.py  logging_tools.py  time.py  validators.py
docker/initdb/: 01-create-dbs-and-role.sql  02-extensions-and-grants.sql
docs/: DEVELOPMENT.md  POLICY_DIGEST.md  SETUP.md
docs/ADR/: 0001-foundation.md
migrations/: env.py  script.py.mako
migrations/versions/: 20251003_0701_ddc1645c7dfa_initial_schema.py  20251006_0957_b01edbc4c937_noop_plumbing_check.py  20251008_0203_460e2199c8df_test.py
project_files/: README.md  codex_workflow.md  coding_standards.md  company_wide_knowledge_manual.md  core_instructions.md  custom_instructions.md  database_erd.md  documentation_standards.md  error_handling_guidelines.md  glossary.md  scheduling_engine_internal_process_manual.md  testing_standards.md
scripts/wizards/: db_wizard.py  migration_wizard.py  test_wizard.py
sql/: seed_data.sql
tests/: conftest.py  test_cli_entrypoints.py  test_smoke.py
tests/fixtures/: calendar.py  db.py  time.py
tests/integration/: test_db_connect.py  test_migrations.py  test_repositories.py  test_seed_data.py  test_seed_flow.py  test_seeding_idempotent.py
tests/integration/repositories/system/: test_competition_repository.py  (+5 more)
tests/unit/: test_errors_mapping.py  test_handlers_cli.py  test_repositories_pagination.py  test_repositories_sorting.py  test_schemas_base_config.py
tests/utils/: test_ids.py  test_slug_normalizer.py  test_time.py  test_time_helpers.py  test_validators.py
(+9 files in other folders)
